--- a/body-style.css
+++ b/body-style.css
@@ -43,12 +43,12 @@ input {border: none;box-sizing: border-box;}
 #mobile-menu-btn {display: none;}
 #main-nav .icon {color: #fff;}
 #main-nav .widget-content>ul>li {float: left;margin-right: 5px;color: #fff;line-height: 43px;}
-#main-nav .widget-content>ul>li>a {padding: 8px 15px;border-radius: 3px;font-size: 0.875rem;font-weight: 700;text-transform: uppercase;}
+#main-nav .widget-content>ul>li>a {padding: 8px 15px;border-radius: 3px;font-size: 0.975rem;font-weight: 700;text-transform: uppercase;}
 #main-nav .widget-content>ul>li>a:hover {background-color: #21759b;}
 #main-nav .widget-content>ul>li>a:hover+.mega-menu-wrapper {display: block;}
 .mega-icon:after {content: '\25be';}
 /*--MegaMenus--*/
-.mega-menu-wrapper {position: absolute;left: 0;right: 0;top: 46px;display: none;z-index: 99;}
+.mega-menu-wrapper {position: absolute;left: 0;right: 0;top: 66px;display: none;z-index: 99;}
 .mega-menu-wrapper:before {content: '';display: block;height: 6px;position: absolute;top: -6px;left: 0;right: 0;background: transparent;}
 .mega-menu-wrapper:hover {display: block;}
 .mega-menu {background: #555;padding: 15px !important;border-top: 4px solid #21759b;border-bottom: 4px solid #21759b;z-index: 99;}
@@ -57,18 +57,14 @@ input {border: none;box-sizing: border-box;}
 .mega_post-image {display: block;width: 100%;height: 180px;margin-bottom: 10px;border: 2px solid #747474;}
 .mega_post-title {font-family: 'Roboto Slab', serif;font-weight: 700;line-height: 1.7;}
 /*--SearchBox--*/
-.search-box {position: relative;float: right;display: block;height: 46px;color: #fff;background: #21759b;padding: 0 10px !important;cursor: pointer;line-height: 46px;font-size: 1rem;z-index: 100;}
+.search-box {position: relative;float: right;display: block;height: 66px;color: #fff;background: #21759b;padding: 0 10px !important;cursor: pointer;line-height: 66px;font-size: 1rem;z-index: 100;}
 .searchbox {display: none;float: right;width: 26%;}
 .isOpened {bottom: -44px;height: 40px;}
-.searchbox input {background-color: #21759b;height: 50px;width: 100%;padding-left: 15px;color: #fff;}
+.searchbox input {background-color: #21759b;height: 70px;width: 100%;padding-left: 15px;color: #fff;}
 .searchbox input:focus {outline: 0;}
 .searchbox input::-webkit-input-placeholder {color: #fff;}
 .searchbox input:-ms-input-placeholder {color: #fff;}
 .searchbox input::-moz-placeholder {color: #fff;}
-/*--Slider--*/
-#slider .widget {position: relative;min-height: 385px;margin-bottom: 60px;font-size: 0;}
-#slider .post-category, .slider-post-title {color: #fff !important;}
-#slider .title {display: none;}
 /*--WidgetsStyles--*/
 #blog-posts .HTML {margin: 0;}
 .main-content {position: relative;margin-bottom: 70px;}
@@ -117,7 +113,7 @@ div#___plusone_0 {width: 185px !important;}
 .post-labels .post-label-anchor {margin-right: 6px;margin-left: 3px;}
 .post-labels .post-label-anchor:hover {text-decoration: underline;}
 /*--AuthorInfo--*/
-.author-info {margin-top: 30px;background-color: #f7f7f7;padding: 20px;}
+.author-info {margin-top: 30px;background-color: #ffffff;padding: 20px;border-radius: 5px;}
 .author-avatar {width: 100px;height: 100px;float: left;border: 3px solid #FFFFFF;box-shadow: 0 0 5px #C6C6C6;margin-left: 0;margin-right: 20px;}
 .author-name {font-size: 1.1rem;font-weight: 700;margin-bottom: 10px;margin-top: -7px;}
 .author-bio {font-size: 0.875rem;margin-left: 120px;color: #666;}
@@ -345,8 +341,8 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: "Courier News", Mon
 @media only screen and (max-width: 880px) {
 .searchbox {width: 50% !important;}
 #main-nav-wrapper {position: relative;}
-#main-nav {position: absolute;top: 46px;display: none;z-index: 999;}
-#mobile-menu-btn {display: block;line-height: 46px;float: left;padding: 0 10px;color: #fff;cursor: pointer;background: #21759b;}
+#main-nav {position: absolute;top: 66px;display: none;z-index: 999;}
+#mobile-menu-btn {display: block;line-height: 66px;float: left;padding: 0 10px;color: #fff;cursor: pointer;background: #21759b;}
 #main-nav .widget-content > ul { background: #555;}
 #main-nav .widget-content > ul > li {float: none !important;margin-right: 0;line-height: 40px;}
 #main-nav .widget-content > ul > li > a {padding: 0 15px;border-radius: 0;display: block;}
