--- a/body-style.css
+++ b/body-style.css
@@ -392,3 +392,27 @@ overflow: hidden;padding: 10px;margin: 0 0 10px;font-family: "Courier News", Mon
 .search-box {display: none !important;}
 .searchbox {display: none !important;}
 }
+/*--TemplateStyle--*/
+body#layout {text-transform: capitalize;}
+body#layout div.section {margin: 0 0 10px 0;}
+#layout .pre-loader {display:none;}
+#layout .header {padding: 6px;margin-bottom: 15px;padding-bottom: 0px;padding-top: 7px;}
+#layout .header .widget-content {border: 0 !important;}
+#layout #main-nav-wrapper {margin-bottom: 100px;}
+#layout #logo-and-ad-container {overflow: hidden !important;}
+#layout #Header1 {float: left !important;width: 30% !important;display: block;}
+#layout .logo-and-ad-container .HTML {float: right !important;display: block;width: 67% !important;}
+#layout #main-nav {float: none;}
+#layout #search-box,#layout #search-input {display: none;}
+#layout #slider {height: 77px;text-transform: capitalize;border: 0 !important;}
+#layout #slider .widget {min-height: 0;}
+#layout .widget-content {border: 0 !important;}
+#layout .main-content {margin-bottom: 10px;}
+#layout .blog-posts-wrapper {float: left;width: 70%;text-transform: capitalize;}
+#layout .blog-posts-wrapper .section {border: 0 !important;}
+#layout .sidebar-wrapper {width: 32%;}
+#layout .sidebar-wrapper .section {border: 0 !important;}
+#layout .sidebartabs {display: none;}
+#layout .sidebartabs-wrapper {margin-bottom: 0;}
+#layout #footer-wrapper {padding: 10px;}
+#layout #footer-wrapper .container &gt; .section {margin-right: 15px;width: 27.76% !important;border: 0;}
